# deer-flow

./: .env.example  .gitignore  CONTRIBUTING.md  Install.md  Makefile  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  config.example.yaml  nginx.conf
backend/: CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  debug.py  langgraph.json  pyproject.toml
backend/.claude/: settings.local.json
backend/app/channels/: manager.py  service.py
backend/app/gateway/: services.py
backend/docs/: BACKEND_TODO.md  CONFIGURATION.md  TODO.md  rfc-langfuse-tracing.md  rfc-p1-deferred-mcp-execution-gate.md  rfc-p1-local-custom-mount-symlink-boundary.md  rfc-p1-run-rollback-serialization.md  rfc-p1-runtime-context-config-compat.md  rfc-p1-subagent-skill-allowlist-inheritance.md
backend/src/agents/: thread_state.py
backend/src/config/: __init__.py  app_config.py  (+2 more)
backend/tests/: test_acp_config.py  test_aio_sandbox_local_backend.py  test_channels.py  test_doctor.py  test_gateway_mcp_router.py  test_gateway_services.py  test_invoke_acp_agent_tool.py  test_k8s_sandbox_provider.py  test_lead_agent_model_resolution.py  test_lead_agent_prompt.py  test_lead_agent_skills.py  test_local_sandbox_provider_mounts.py  test_memory_queue.py  test_memory_storage.py  test_memory_updater.py  test_sandbox_search_tools.py  test_sandbox_tools_security.py  test_setup_wizard.py  test_skill_manage_tool.py  test_skills_custom_router.py  test_skills_installer.py  test_subagent_timeout_config.py  test_summarization_middleware.py  test_tool_search.py  test_view_image_tool.py
(+106 files in other folders)
